--- a/cochesNet/cochesNet/templates/index.html
+++ b/cochesNet/cochesNet/templates/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,6 +13,13 @@
 <style>
   body {
     text-align: center;
+    
+    background-image: url('/static/img/backgroundImg.jpg');
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;;
   }
 
   form {
@@ -106,7 +114,7 @@
   integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
-{% load static %}
+
 <script src="{% static '/js/script.js' %}"></script>
 
 </html>
