--- a/cochesNet/cochesNet/templates/prediction.html
+++ b/cochesNet/cochesNet/templates/prediction.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+    
+          background-image: url('/static/img/backgroundImg.jpg');
+          background-repeat: no-repeat;
+          -webkit-background-size: cover;
+          -moz-background-size: cover;
+          -o-background-size: cover;
+          background-size: cover;;
+        }
         table {
           font-family: arial, sans-serif;
           border-collapse: collapse;
@@ -16,6 +25,7 @@
           border: 1px solid #dddddd;
           text-align: left;
           padding: 8px;
+          background-color: antiquewhite;
         }
         
         th{
